# SystemC-projekt

./: .gitignore  CMakeLists.txt  Makefile.example  QUICK_START.bat  README.md  build_imgui.ps1  burner.cpp  burner.h  command.h  command_channel.h  cpu1.cpp  cpu1.h  cpu2.cpp  cpu2.h  display_manager.cpp  display_manager.h  download_imgui.ps1  fan.cpp  fan.h  gui_manager.cpp  gui_manager.h  gui_window.cpp  gui_window.h  oven.cpp  oven.h  sc_main.cpp  testbench.cpp  testbench.h  user_interface.cpp  user_interface.h
src/: main.cpp
